twitter-html-file

--- a/index.html
+++ b/index.html
@@ -2,10 +2,51 @@
 <html lang="en">
   <head>
     <!-- You may want to change the site title -->
-    <title>foobar</title>
+    <title>Twitter</title>
   </head>
   <body>
     <!-- put your content below -->
-    <h1>Hello World!</h1>
+    <h2>twitter</h2>
+      <div>
+        <a href="#home">updates</a>
+        <a href="archives">archive</a>
+        <a href="preferences">preferences</a>
+        <a href="help" style="color:blue;text-underline-position: below;">help</a>
+        <a href="sign-out">sign-out</a>
+      </div>
+    <h1>whats your status?</h1>
+      <div>
+        <input type="text" placeholder="status...">
+        <p>Current status: wondering when Mer is going to show up </p>
+        <button>update</button>
+      </div>
+    <h2>friends status</h2>
+      <div>
+        <p style="text-underline-position: below;">add more friends</p>
+        <ul>
+          <li>⭐<a>Jack</a>Just discovered a hidden gem of a coffee shop in my neighborhood.</li>
+          <li>⭐<a>Dom</a>Started reading this incredible book last night and couldn't put it down.</li>
+          <li>⭐<a>Chintya</a>Spent the whole day exploring a new hiking trail</li>
+          <li>⭐<a>Mark</a>Just binge-watched an entire season of my favorite TV show</li>
+          <li>⭐<a>Maja</a>Woke up to the sound of rain outside. </li>
+          <li>⭐<a>Florian</a>Cooking experiment gone wrong!</li>
+          <li>⭐<a>Jack444</a>There's something so soothing about the patter on the windowpane.</li>
+        </ul>
+      </div>
+      <footer>
+        <h3>public status</h3>
+        <div>
+          <ul>
+            <li>💬<a>Jacky</a>wondering when Mer is going to show up</li>
+          </ul>
+        </div>
+        <h3>my stats</h3>
+        <div>
+          <ul>
+            <li><a>7 folowers</a></li>
+            <li> 392 pings today</li>
+          </ul>
+        </div>
+      </footer>
   </body>
 </html>
