--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
       <div>
         <p style="text-underline-position: below;">add more friends</p>
         <ul>
-          <li>⭐<a>Jack</a>Just discovered a hidden gem of a coffee shop in my neighborhood.</li>
-          <li>⭐<a>Dom</a>Started reading this incredible book last night and couldn't put it down.</li>
-          <li>⭐<a>Chintya</a>Spent the whole day exploring a new hiking trail</li>
-          <li>⭐<a>Mark</a>Just binge-watched an entire season of my favorite TV show</li>
-          <li>⭐<a>Maja</a>Woke up to the sound of rain outside. </li>
-          <li>⭐<a>Florian</a>Cooking experiment gone wrong!</li>
-          <li>⭐<a>Jack444</a>There's something so soothing about the patter on the windowpane.</li>
+          <li>⭐<a href="Jack">Jack</a>Just discovered a hidden gem of a coffee shop in my neighborhood.</li>
+          <li>⭐<a href="Dom">Dom</a>Started reading this incredible book last night and couldn't put it down.</li>
+          <li>⭐<a href="Chintya">Chintya</a>Spent the whole day exploring a new hiking trail</li>
+          <li>⭐<a href="Mark">Mark</a>Just binge-watched an entire season of my favorite TV show</li>
+          <li>⭐<a href="Maja">Maja</a>Woke up to the sound of rain outside. </li>
+          <li>⭐<a href="Florian">Florian</a>Cooking experiment gone wrong!</li>
+          <li>⭐<a href="Jack444">Jack444</a>There's something so soothing about the patter on the windowpane.</li>
         </ul>
       </div>
       <footer>
         <h3>public status</h3>
         <div>
           <ul>
-            <li>💬<a>Jacky</a>wondering when Mer is going to show up</li>
+            <li>💬<a href="Jacky">Jacky</a>wondering when Mer is going to show up</li>
           </ul>
         </div>
         <h3>my stats</h3>
